--- a/cropapp/templates/admin/adminbasee.html
+++ b/cropapp/templates/admin/adminbasee.html
@@ -1,152 +1,162 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
-  <head>
-    <title>{% block title %} krishiworld {% endblock %}</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700&display=swap" rel="stylesheet">
+<head>
+  <title>{% block title %} krishiworld {% endblock %}</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="{% static 'css/open-iconic-bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/animate.css' %}">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}">
+  <link rel="stylesheet" href="{% static 'css/open-iconic-bootstrap.min.css' %}">
+  <link rel="stylesheet" href="{% static 'css/animate.css' %}">
 
-    <link rel="stylesheet" href="{% static 'css/aos.css' %}">
+  <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
+  <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
+  <link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}">
 
-    <link rel="stylesheet" href="{% static 'css/ionicons.min.css' %}">
+  <link rel="stylesheet" href="{% static 'css/aos.css' %}">
 
-    <link rel="stylesheet" href="{% static 'css/bootstrap-datepicker.css' %}">
-    <link rel="stylesheet" href="{% static 'css/jquery.timepicker.css' %}">
+  <link rel="stylesheet" href="{% static 'css/ionicons.min.css' %}">
+
+  <link rel="stylesheet" href="{% static 'css/bootstrap-datepicker.css' %}">
+  <link rel="stylesheet" href="{% static 'css/jquery.timepicker.css' %}">
 
 
-    <link rel="stylesheet" href="{% static 'css/flaticon.css' %}">
-    <link rel="stylesheet" href="{% static 'css/icomoon.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <link rel="stylesheet" href="{% static 'css/flaticon.css' %}">
+  <link rel="stylesheet" href="{% static 'css/icomoon.css' %}">
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
-  </head>
-  <body class="goto-here">
+</head>
 
-    <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-	    <div class="container">
-	      <a class="navbar-brand" href="/index">Krishi World</a>
-	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class="oi oi-menu"></span> Menu
-	      </button>
+<body class="goto-here">
 
-	      <div class="collapse navbar-collapse" id="ftco-nav">
-	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item active"><a href="/adminhome" class="nav-link">Admin Home</a></li>
+  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+    <div class="container">
+      <a class="navbar-brand" href="/index">Krishi World</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
+        aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="oi oi-menu"></span> Menu
+      </button>
 
-	          <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="Orders" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Orders</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown04">
-              	<a class="dropdown-item" href="/orderdetail/">View Orders</a>
+      <div class="collapse navbar-collapse" id="ftco-nav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active"><a href="/adminhome" class="nav-link">Admin Panel</a></li>
 
-              	<a class="dropdown-item" href="/viewOldOrders">View Finished Orders</a>
-              </div>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="Orders" id="dropdown04" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">Orders</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown04">
+              <a class="dropdown-item" href="/orderdetail/">View Orders</a>
 
-            </li>
+              <a class="dropdown-item" href="/viewOldOrders">View Finished Orders</a>
+            </div>
 
-	          <li class="nav-item"><a href="/managecrops" class="nav-link">Crops</a></li>
-            <li class="nav-item"><a href="/userdetails/" class="nav-link">View Users</a></li>
-            <li class="nav-item"><a href="/adViewMessages/" class="nav-link">Messages</a></li>
-	          <li class="nav-item"><a href="/aboutadmin" class="nav-link">About</a></li>
+          </li>
 
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="shop" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Hey ,{{ admin.uname}}!</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown04">
-                <a class="dropdown-item" href="orderhistory">Order History</a>
-                <a class="dropdown-item" href="changeaddress">Change Address</a>
-                <a class="dropdown-item" href="/updateadminpass">Change Password</a>
-                <a class="dropdown-item" href="/logout">LogOut</a>
-              </div>
-            </li>
-            
-	        </ul>
-	      </div>
-	    </div>
-	  </nav>
-    <!-- END nav -->
-{% block slider %}
+          <li class="nav-item"><a href="/adminhome/" class="nav-link">Crops</a></li>
+          <li class="nav-item"><a href="/userdetails/" class="nav-link">View Users</a></li>
+          <li class="nav-item"><a href="/adViewMessages/" class="nav-link">Messages</a></li>
+          <li class="nav-item"><a href="/aboutadmin" class="nav-link">About</a></li>
 
-{% endblock %}
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="shop" id="dropdown04" data-toggle="dropdown" aria-haspopup="true"
+              aria-expanded="false">Hey ,{{ admin.uname}}!</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown04">
+              <a class="dropdown-item" href="/updateadminpass">Change Password</a>
+              <a class="dropdown-item" href="/logout">LogOut</a>
+            </div>
+          </li>
+
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- END nav -->
+  {% block slider %}
+
+  {% endblock %}
 
   <section class="ftco-section ftco-no-pt ftco-no-pb py-5 bg-light">
-      {% block Content1 %} {% endblock %}
+    {% block Content1 %} {% endblock %}
 
-    </section>
+  </section>
 
-		<section class="ftco-section ftco-category ftco-no-pt">
-      {% block Content2 %} {% endblock %}
+  <section class="ftco-section ftco-category ftco-no-pt">
+    {% block Content2 %} {% endblock %}
 
-		</section>
+  </section>
 
-         <section class="ftco-section">
-             {% block Content3 %} {% endblock %}
+  <section class="ftco-section">
+    {% block Content3 %} {% endblock %}
 
-        </section>
-
-
-
-    <hr>
+  </section>
 
 
-    <footer class="ftco-footer ftco-section">
-      <div class="container">
-        <div class="row">
-          <div class="mouse">
-            <a href="#" class="mouse-icon">
-              <div class="mouse-wheel"><span class="ion-ios-arrow-up"></span></div>
-            </a>
+
+  <hr>
+
+
+  <footer class="ftco-footer ftco-section">
+    <div class="container">
+      <div class="row">
+        <div class="mouse">
+          <a href="#" class="mouse-icon">
+            <div class="mouse-wheel"><span class="ion-ios-arrow-up"></span></div>
+          </a>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col-md">
+          <div class="ftco-footer-widget mb-4">
+            <h2 class="ftco-heading-2">Krishi World</h2>
+            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
+            <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
+              <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
+              <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
+              <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+            </ul>
           </div>
         </div>
-        <div class="row mb-5">
-          <div class="col-md">
-            <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Krishi World</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
-              <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md">
-            <div class="ftco-footer-widget mb-4 ml-md-5">
-              <h2 class="ftco-heading-2">Menu</h2>
-              <ul class="list-unstyled">
-                <li><a href="shop" class="py-2 d-block">Shop</a></li>
+        <div class="col-md">
+          <div class="ftco-footer-widget mb-4 ml-md-5">
+            <h2 class="ftco-heading-2">Menu</h2>
+            <ul class="list-unstyled">
+              <li><a href="shop" class="py-2 d-block">Shop</a></li>
 
-                <li><a href="/aboutadmin" class="py-2 d-block">About US</a></li>
-                <li><a href="/contactadmin" class="py-2 d-block">Contact Us</a></li>
-              </ul>
-            </div>
+              <li><a href="/aboutadmin" class="py-2 d-block">About US</a></li>
+              <li><a href="/contactadmin" class="py-2 d-block">Contact Us</a></li>
+            </ul>
           </div>
+        </div>
 
-          <div class="col-md">
-            <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Have a Questions?</h2>
-              <div class="block-23 mb-3">
-                <ul>
-                  <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-                  <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-                  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
-                </ul>
-              </div>
+        <div class="col-md">
+          <div class="ftco-footer-widget mb-4">
+            <h2 class="ftco-heading-2">Have a Questions?</h2>
+            <div class="block-23 mb-3">
+              <ul>
+                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San
+                    Francisco, California, USA</span></li>
+                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
+                <li><a href="#"><span class="icon icon-envelope"></span><span
+                      class="text">info@yourdomain.com</span></a></li>
+              </ul>
             </div>
           </div>
         </div>
       </div>
-    </footer>
-   <!-- loader -->
-  <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
+    </div>
+  </footer>
+  <!-- loader -->
+  <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
+      <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
+      <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
+        stroke="#F96D00" />
+    </svg></div>
   <script src="{% static 'js/jquery.min.js' %}"></script>
   <script src="{% static 'js/jquery-migrate-3.0.1.min.js' %}"></script>
   <script src="{% static 'js/popper.min.js' %}"></script>
@@ -160,32 +170,35 @@
   <script src="{% static 'js/jquery.animateNumber.min.js' %}"></script>
   <script src="{% static 'js/bootstrap-datepicker.js' %}"></script>
   <script src="{% static 'js/scrollax.min.js' %}"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
   <script src="{% static 'js/google-map.js' %}"></script>
   <script src="{% static 'js/main.js' %}"></script>
   <script src="{% static 'js/custom.js' %}"></script>
-<link href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" rel="Stylesheet"></link>
-<script type="text/javascript">
-jQuery(function() {
-    $("#id_input").on('keyup', function(){
+  <link href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" rel="Stylesheet">
+  </link>
+  <script type="text/javascript">
+    jQuery(function () {
+      $("#id_input").on('keyup', function () {
         var value = $(this).val();
         $.ajax({
-            url: "/ajax/autocomplete/",
-            data: {
-              'search': value
-            },
-            dataType: 'json',
-            success: function (data) {
-                list = data.list;
-                $( "#id_input" ).autocomplete({
-      source: list
-    });
-            }
+          url: "/ajax/autocomplete/",
+          data: {
+            'search': value
+          },
+          dataType: 'json',
+          success: function (data) {
+            list = data.list;
+            $("#id_input").autocomplete({
+              source: list
+            });
+          }
         });
+      });
     });
-  });
-</script>
-<script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js" ></script>
+  </script>
+  <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
 
-  </body>
+</body>
+
 </html>
