--- a/cropapp/templates/loginsignupbase.html
+++ b/cropapp/templates/loginsignupbase.html
@@ -24,7 +24,7 @@
 
           <div class="collapse navbar-collapse" id="ftco-nav">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item active"><a href="/index/" class="nav-link">Home</a></li>
+              <li class="nav-item active"><a href="/userhome/" class="nav-link">Home</a></li>
               <li class="nav-item"><a href="/publicshop/" class="nav-link">Crops</a></li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="/publicshop/" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Orders</a>
