--- a/cropapp/templates/user/userbase.html
+++ b/cropapp/templates/user/userbase.html
@@ -72,8 +72,8 @@
               <a class="nav-link dropdown-toggle" href="shop" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Hey ,{{ user.fname}}{{user.lname}}!</a>
               <div class="dropdown-menu" aria-labelledby="dropdown04">
                 <a class="dropdown-item" href="orderhistory">Order History</a>
-                <a class="dropdown-item" href="changeaddress">Change Address</a>
-                <a class="dropdown-item" href="/updateuserpass">Change Password</a>
+                <a class="dropdown-item" href="/changeaddress/">Change Address</a>
+                <a class="dropdown-item" href="/userupdate/">Change Password</a>
                 <a class="dropdown-item" href="/logout">LogOut</a>
               </div>
             </li>
